<resources>
    <string name="app_name">MiniTwitter</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="text_create_account">New to MiniTwitter? Sing up now</string>
    <string name="btn_register">Create account</string>
    <string name="text_go_to_login">If you have an account, sign in here</string>
    <string name="hint_username">Username</string>
    <string name="email_required">Email is required</string>
    <string name="password_required">Password is required</string>
    <string name="username_required">Username is required</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="toolbar_title_home">Home</string>

    <string name="new_tweet_dialog_tweet">Tweet</string>
    <string name="new_tweet_dialog_tweet_hint">Write something</string>
    <string name="new_tweet_dialog_cancel_tweet_header">Cancel tweet</string>
    <string name="new_tweet_dialog_cancel_tweet_body">Are you sure to cancel this tweet?</string>
    <string name="new_tweet_dialog_cancel_tweet_negative_button">Cancel</string>
    <string name="new_tweet_dialog_cancel_tweet_positive_button">Delete</string>
    <string name="new_tweet_dialog_write_a_message">You must write a message</string>

    <string name="delete_tweet_menu_item">Delete tweet</string>
    <string name="profile_username_hint">Username</string>
    <string name="profile_current_password_hint">Current password</string>
    <string name="profile_button_save">Save profile</string>
    <string name="profile_button_update_password">Update password</string>
    <string name="profile_website_hint">Your website</string>
    <string name="profile_email_hint">Email</string>
    <string name="profile_description_hint">Description about you</string>
    <string name="profile_username_required">Username is required</string>
    <string name="profile_email_required">Email is required</string>
    <string name="profile_password_required">Password is required</string>
    <string name="profile_sending_to_server">Sending information to server</string>
    <string name="profile_permission_needed_to_select_photo_title">Permissions needed to select photo</string>
    <string name="profile_permission_needed_to_select_photo_body">The permissions requested are needed to choose a profile photo</string>
    <string name="profile_permission_needed_to_select_photo_accept_button">Accept</string>

    <string name="main_activity_login_successful">Login successful</string>
    <string name="main_activity_email_password_wrong">Email or password wrong</string>
    <string name="main_activity_connection_problem">Connection problem. Please try again</string>
</resources>
